--- a/BlazorPeliculas/Client/wwwroot/index.html
+++ b/BlazorPeliculas/Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -23,6 +23,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/Utilidades.js"></script>
+
 </body>
 
 </html>
